Project

General

Profile

Actions

Bug #23799

closed

MDSMonitor: creates invalid transition from up:creating to up:shutdown

Added by Patrick Donnelly almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Urgent
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS, MDSMonitor
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-04-19 17:47:25.681 7f9f15e5c700  1 -- 172.21.15.90:6817/3943615818 <== mon.1 172.21.15.90:6789/0 19 ==== mdsmap(e 27) v1 ==== 639+0+0 (3041393998 0 0) 0x55dbc33e2780 con 0x55dbc3471500
2018-04-19 17:47:25.681 7f9f15e5c700  5 mds.d handle_mds_map epoch 27 from mon.1
2018-04-19 17:47:25.681 7f9f15e5c700 10 mds.d      my compat compat={},rocompat={},incompat={1=base v0.20,2=client writeable ranges,3=default file layouts on dirs,4=dir inode in separate object,5=mds uses versioned encoding,6=dirfrag is stored in omap,7=mds uses inline data,8=no anchor table,9=file layout v2,10=snaprealm v2}
2018-04-19 17:47:25.681 7f9f15e5c700 10 mds.d  mdsmap compat compat={},rocompat={},incompat={1=base v0.20,2=client writeable ranges,3=default file layouts on dirs,4=dir inode in separate object,5=mds uses versioned encoding,6=dirfrag is stored in omap,8=no anchor table,9=file layout v2,10=snaprealm v2}
2018-04-19 17:47:25.681 7f9f15e5c700 10 mds.d map says I am 172.21.15.90:6817/3943615818 mds.0.26 state up:stopping
2018-04-19 17:47:25.681 7f9f15e5c700 10 mds.d handle_mds_map: handling map as rank 0
2018-04-19 17:47:25.681 7f9f15e5c700  1 mds.0.26 handle_mds_map i am now mds.0.26
2018-04-19 17:47:25.681 7f9f15e5c700  1 mds.0.26 handle_mds_map state change up:starting --> up:stopping
2018-04-19 17:47:25.681 7f9f15e5c700 10 mds.beacon.d set_want_state: up:active -> up:stopping
2018-04-19 17:47:25.685 7f9f15e5c700 -1 /build/ceph-13.0.2-1517-gbb95292/src/mds/MDSRank.cc: In function 'void MDSRankDispatcher::handle_mds_map(MMDSMap*, MDSMap*)' thread 7f9f15e5c700 time 2018-04-19 17:47:25.688757
/build/ceph-13.0.2-1517-gbb95292/src/mds/MDSRank.cc: 1706: FAILED assert(oldstate == MDSMap::STATE_ACTIVE)

 ceph version 13.0.2-1517-gbb95292 (bb9529221305433da967a3d1f4a4ce0530ec8f7d) mimic (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x102) [0x7f9f1d6bb9d2]
 2: (()+0x2e2ba7) [0x7f9f1d6bbba7]
 3: (MDSRankDispatcher::handle_mds_map(MMDSMap*, MDSMap*)+0x20fa) [0x55dbc1fea3ca]
 4: (MDSDaemon::handle_mds_map(MMDSMap*)+0xc98) [0x55dbc1fcd568]
 5: (MDSDaemon::handle_core_message(Message*)+0x6c) [0x55dbc1fcfebc]
 6: (MDSDaemon::ms_dispatch(Message*)+0xbb) [0x55dbc1fd055b]
 7: (DispatchQueue::entry()+0xb5a) [0x7f9f1d7355fa]
 8: (DispatchQueue::DispatchThread::entry()+0xd) [0x7f9f1d7d510d]
 9: (()+0x76ba) [0x7f9f1cf526ba]
 10: (clone()+0x6d) [0x7f9f1c77b41d]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

From: /ceph/teuthology-archive/pdonnell-2018-04-19_15:47:14-fs-master-testing-basic-smithi/2416069/remote/smithi090/log/ceph-mds.d.log.gz

Unfortunately PR 21458 didn't fix this like I thought.

Actions #1

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from New to Fix Under Review
  • Backport deleted (luminous)
Actions #2

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF