MDSMonitor: do not resize cluster when MDS is up:creating

Fixes: http://tracker.ceph.com/issues/23799

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>